# MonsterWar

./: .gitignore  CMakeLists.txt  MonsterWar.slnx  README.md  imgui.ini
.github/: copilot-instructions.md
assets/: config.json
assets/data/: effect_data.json  projectile_data.json  resource_mapping.json
assets/maps/: level1.tmj
assets/save/: SLOT_1.json
doc/: ASSETS_FUNCTIONAL_REQUIREMENTS.md  ECS_ARCHITECTURE.md  MULTITHREADING_DESIGN.md  MULTITHREADING_GUIDELINES.md  PROJECT_PLAN.md  PROJECT_PROGRESS.md  README.md  RENDERER_BACKEND_MIGRATION_PLAN.md  RENDERER_BACKEND_SWITCHABLE_PLAN.md  RESUME_PROJECT_NOTES.md
doc/audio/: README.md
doc/component/: README.md
doc/core/: README.md
doc/engine/audio/: README.md
doc/engine/component/: README.md
doc/engine/core/: README.md
doc/engine/input/: README.md
doc/engine/interface/: README.md
doc/engine/loader/: README.md
doc/engine/object/: README.md
doc/engine/render/: README.md
doc/engine/resource/: README.md
doc/engine/scene/: README.md
doc/engine/system/: README.md
doc/engine/ui/: README.md
doc/engine/utils/: README.md
doc/game/: README.md
doc/game/component/: README.md
doc/game/data/: README.md
doc/game/defs/: README.md
doc/game/factory/: README.md
doc/game/loader/: README.md
doc/game/scene/: README.md
doc/game/system/: README.md
doc/input/: README.md
doc/interface/: README.md
doc/render/: README.md
doc/resource/: README.md
doc/scene/: README.md
doc/ui/: README.md
doc/utils/: README.md
src/: main.cpp
src/engine/audio/: audio_locator.cpp  audio_locator.h  audio_player.cpp  audio_player.h  iaudio_player.h  log_audio_player.cpp  log_audio_player.h
src/engine/component/: animation_component.h  audio_component.h  name_component.h  parallax_component.h  render_component.h  sprite_component.cpp  sprite_component.h  tilelayer_component.cpp  tilelayer_component.h  transform_component.cpp  transform_component.h  velocity_component.h
src/engine/core/: config.cpp  config.h  context.cpp  context.h  game_app.cpp  game_app.h  game_state.cpp  game_state.h
src/engine/input/: input_manager.cpp  input_manager.h
src/engine/interface/: observer.cpp  subject.cpp
src/engine/loader/: basic_entity_builder.cpp  basic_entity_builder.h  level_loader.cpp  level_loader.h
src/engine/object/: object_builder.cpp  object_builder.h
src/engine/render/: animation.h  camera.cpp  camera.h  image.h  renderer.cpp  renderer.h  sprite.h  text_renderer.cpp  text_renderer.h
src/engine/resource/: audio_manager.cpp  audio_manager.h  font_manager.cpp  font_manager.h  resource_id.h  resource_manager.cpp  resource_manager.h  texture_manager.cpp  texture_manager.h
src/engine/scene/: level_loader.cpp  scene.cpp  scene.h  scene_manager.cpp  scene_manager.h
src/engine/system/: animation_system.cpp  animation_system.h  audio_system.cpp  audio_system.h  fwd.h  movement_system.cpp  movement_system.h  render_system.cpp  render_system.h  ysort_system.cpp  ysort_system.h
src/engine/ui/: ui_button.cpp  ui_button.h  ui_element.cpp  ui_element.h  ui_image.cpp  ui_image.h  ui_interactive.cpp  (+4 more)
(+77 files in other folders)
